--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -71,12 +71,13 @@ jobs:
         if: startsWith(matrix.os, 'ubuntu')
         run: |
           sudo apt-get update
-          sudo apt-get install -y \
+          sudo apt-get install -y --no-install-recommends \
             libgtk-3-dev \
             libwebkit2gtk-4.0-dev \
-            libappindicator3-dev \
             librsvg2-dev \
             patchelf
+          sudo apt-get install -y --no-install-recommends libappindicator3-dev || \
+          sudo apt-get install -y --no-install-recommends libayatana-appindicator3-dev
 
       - name: Install
         run: npm ci
