--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 tauri-build = { version = "1.5", features = [] }
 
 [dependencies]
-tauri = { version = "1.5", features = [ "fs-all", "dialog-open", "dialog-save", "path-all", "shell-open"] }
+tauri = { version = "1.5", features = [ "fs-all", "dialog-open", "dialog-save", "path-all", "shell-open", "window-all"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 thiserror = "1"
@@ -15,6 +15,7 @@ walkdir = "2"
 uuid = { version = "1", features = ["v4"] }
 crc32fast = "1"
 fs2 = "0.4"
+rayon = "1.10"
 
 [features]
 custom-protocol = ["tauri/custom-protocol"]
